--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,10 @@
 .App {
   text-align: center;
+  background-image: url("../src/img/wallpaper.jpg");
+  background-position: center;
+  background-size: cover;
+  background-repeat: repeat-y;
+  height: 100vh;
 }
 
 .App-logo {
@@ -35,4 +40,16 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+body {
+  background: rgb(43, 43, 43);
+  background: linear-gradient(
+    90deg,
+    rgba(43, 43, 43, 1) 0%,
+    rgba(55, 52, 52, 1) 20%,
+    rgba(68, 68, 68, 1) 50%,
+    rgba(55, 52, 52, 1) 80%,
+    rgba(43, 43, 43, 1) 100%
+  );
 }
